# djangoconus-automation

./: .env-dist  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  compose.yml  db.sqlite3  demo-sendy-two.py  demo-sendy.py  demo-slack.py  docker-compose.yml  docker-entrypoint.sh  fly.production.toml  fly.toml  justfile  manage.py  payload.json  pyproject.toml  requirements.in  requirements.txt  ruff.toml  start-worker.sh
.github/workflows/: actions.yml  deploy.yml  main.yml  test.yml
automation/: settings.py  urls.py
automation/automation/: settings.py  urls.py
automation/titowebhooks/: views.py
automation/titowebhooks/migrations/: 0001_initial.py
config/: settings.py  urls.py
sendy/: admin.py  apps.py  models.py  utils.py
sendy/management/commands/: import_brands.py  import_lists.py
sendy/migrations/: 0001_initial.py
templates/: 404.html  500.html  base.html  homepage.html
templates/_socialaccount/: authentication_error.html  login_cancelled.html
templates/account/: base.html  login.html  logout.html  password_reset.html  password_reset_done.html  signup.html
templates/allauth/layouts/: base.html
templates/socialaccount/: login.html  signup.html
templates/socialaccount/providers/github/: login.html  signup.html
templates/tickets/: claim.html  claim_result.html  create.html  info.html  list.html
tickets/: admin.py  forms.py  models.py  views.py
tickets/management/commands/: create_tickets.py
tickets/migrations/: 0001_initial.py  0002_ticketlink_attendee_email_and_more.py  0003_remove_date_link_accessed.py
tickets/tests/: conftest.py  test_models.py  test_views.py
titowebhooks/: admin.py  apps.py  models.py  tests.py  utils.py  views.py
titowebhooks/management/commands/: send_to_sendy.py
titowebhooks/migrations/: 0001_initial.py
titowebhooks/tests/: test_models.py  test_send_to_sendy_command.py
travel_safety/: README.md  admin.py  apps.py  forms.py  models.py  urls.py  views.py
travel_safety/migrations/: 0001_initial.py  0002_travelregistration_accommodation_and_more.py
travel_safety/templates/travel_safety/: register.html  success.html
