[project]
name = "djangoconus-automation"
version = "2025.9.4"
description = "Django Project to automate tasks for DjangoCon US"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apiron",
    "django-allauth",
    "django-click",
    "django-q2",
    "Django<6",
    "environs[django]",
    "gunicorn",
    "psycopg[binary]",
    "rich",
    "whitenoise",
]

[project.optional-dependencies]
dev = [
    "bumpver",
    "django-test-plus",
    "pre-commit",
    "pytest",
    "pytest-django",
]

[tool.bumpver]
commit = true
commit_message = ":bookmark: bump version {old_version} -> {new_version}"
current_version = "2025.9.4"
push = false   # set to false for CI
tag = true
version_pattern = "YYYY.MM.INC1"

[tool.bumpver.file_patterns]
"automation/__init__.py" = [
    '__version__ = "{version}"',
]
"pyproject.toml" = [
    'version = "{version}"',
    'current_version = "{version}"',
]

[tool.isort]
honor_noqa = true
known-first-party = ["automation"]
profile = "black"
split-on-trailing-comma=true

[tool.pytest.ini_options]
addopts = "-p no:warnings --no-migrations --reuse-db"
DJANGO_SETTINGS_MODULE = "automation.settings"
norecursedirs = ".git .ruff_cache automation fixtures media node_modules static templates"
python_files = "test_*.py"

# https://github.com/charliermarsh/ruff#ruff
[tool.ruff]

line-length = 120
select = [
    'B',  # flake8-bugbear
    'E',  # pycodestyle errors
    'F',  # pyflakes
    'I',  # iSort
    'W',  # pycodestyle warnings
    'B9',
]
ignore = []
per-file-ignores = {"*/migrations/*" = ["E501"]}

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "I"]
unfixable = []

exclude = [
    "*/static/*",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Assume Python 3.12.
target-version = "py312"
